[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chellow"
dynamic = ["version"]
description = "Web Application for checking UK energy bills."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
	"odio==0.0.23",
	"pypdf==4.3.1",
	"pg8000==1.31.1",
	"Flask==3.1.0",
	"SQLAlchemy==2.0.30",
	"flask-restx==1.3.0",
  "jsonschema==4.17.3",  # Temporarily needed until RestX updated
	"openpyxl==3.1.2",
	"python-dateutil==2.8.2",
	"pytz==2022.6",
	"requests==2.32.2",
	"waitress==3.0.1",
	"pep3143daemon==0.0.6",
	"pip>=9.0.1",
	"paramiko==3.4.1",
	"pympler==1.0.1",
	"psutil==5.9.5",
	"xlrd==2.0.1",
	"zish==0.1.11",
]

[project.urls]
"Homepage" = "https://github.com/WessexWater/chellow"

[tool.hatch.version]
path = "VERSION"

[tool.tox]
legacy_tox_ini = """
[tox]

[testenv]
recreate = True
deps =
    flake8
    flake8-alphabetize
    black
    pytest
    pytest-mock
allowlist_externals =
    echo
passenv =
    PGPORT
    PGUSER
    PGHOST
    PGPASSWORD
setenv =
    PGDATABASE = toxchellow
commands =
    black --check .
    flake8 .
    pytest --exitfirst -W error
    echo PGPORT is {env:PGPORT:unset}
    echo PGUSER is {env:PGUSER:unset}
    echo Test database is {env:PGDATABASE:unset} on {env:PGHOST:unset}
"""
